# nucleate-hack-medi-minds

./: .gitignore  README.md  health-accessibility.py  patients.json
backend/: configurations.py  console_main.py  example.env  main.py  main_with_rag.py  new_main.py  pyproject.toml  rag_crawler.py
backend/data-analysis/: interactive_mutiple_plots.py  intractive_multiple_plots_v2.py  plot_steps_weekly.py  test.py  write_metric_utils.py
backend/data-analysis/data/: step_daily_trend.csv
backend/data-analysis/data-analysis/static/: calories_plot.html  health_launcher.html  heart_rate_data.json  sleep_hours_plot.html  spo2_data.json  spo2_plot.html  steps_data.json
backend/data_analysis_ML_forecasting/: interactive_multiplots.py
backend/data_analysis_ML_forecasting/data-analysis/static/: calories_data.json  health_launcher.html  sleep_hours_data.json  water_ml_data.json
backend/json_data/: expert_search_results_20251110_204528.json  expert_search_results_20251110_211923.json
backend/langgraph_agent/: client.py  graph.py  prompts.py
backend/langgraph_agent/graphs/: basic_chatbot_graph.py  doctor_chatbot_graph.py  graph_builder.py  mcp_chatbot_graph.py
backend/langgraph_agent/llms/: gemini_llm.py  groq_llm.py  ollama_llm.py  openai_llm.py
backend/langgraph_agent/mcps/: config.py  dup_mcp_config.json  mcp_config.json
backend/langgraph_agent/mcps/json_data/: appointments.json  doctors.json  patients.json  personal_data.json
backend/langgraph_agent/mcps/local_servers/: doctor_specialist_tool.py  gmail_tool.py  health_data_tool.py  patient_specialist_tool.py
backend/langgraph_agent/nodes/: basic_chatbot_node.py  doctor_chatbot_node.py  mcp_chatbot_node.py  mood_detection_node.py  rag_integration_node.py
backend/langgraph_agent/states/: chatbotState.py
backend/medical_data_store/: chroma.sqlite3
react_frontend/: README.md  index.html  package-lock.json  package.json
react_frontend/public/: heart_rate_plot.html  steps_plot.html  water_ml_plot.html
react_frontend/src/: App.css  App.jsx  constants.js  main.jsx
react_frontend/src/components/: ChatWindow.jsx  MoodAnimation.jsx  Sidebar.jsx  Topbar.jsx  WaterAnimation.jsx
react_frontend/src/utils/: markdown.js
