[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.0.11",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "duckdb>=1.2.2",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "crawl4ai>=0.3.0",
    "chromadb>=0.4.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
