[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.0.11",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "duckdb>=1.2.2",
    "aiohttp>=3.9.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
